Load app icon for Linux.

This fixes the issue when Linux implementation of the assigning app icon
for the window does not request image representation and as result icon
is not loaded.

Bug: 779463
Test: Manually
Change-Id: I33ac3733ad1a428c6a448bc3845d2589ff640d09
Reviewed-on: https://chromium-review.googlesource.com/807398
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Commit-Queue: Yury Khmel <khmel@google.com>
Cr-Commit-Position: refs/heads/master@{#521569}
Former-commit-id: 3297770730a8e432d951ad8faa675f21fe625a48